fix sub-menu z-index

--- a/style.css
+++ b/style.css
@@ -248,6 +248,7 @@ h6 a:visited {
     background-color : white;
     border : 1px solid black;
     border-width : 0 1px 3px;
+    z-index : 999;
 }
 
 /* {{{ HOVER EFFECT */
